gccida/g3/validate_replace_rtx_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:911:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v16; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:919:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:924:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:927:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:929:4: error: expected ';' after expression
rtx v34; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:929:5: error: use of undeclared identifier 'v34'
rtx v34; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:931:6: error: use of undeclared identifier 'v36'
rtx *v36; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:933:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:933:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:940:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+4h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:941:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v47; // [rsp+10h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:943:4: error: expected ';' after expression
rtx x; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:943:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+18h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:945:4: error: expected ';' after expression
rtx froma; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:945:5: error: use of undeclared identifier 'froma'; did you mean 'from'?
rtx froma; // [rsp+20h] [rbp-58h] 
    ^~~~~
    from
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:898:45: note: 'from' declared here
void  validate_replace_rtx_1( rtx *loc, rtx from, rtx to, rtx object) 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:974:1: error: use of undeclared identifier 'x'
x = v4; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:976:1: error: use of undeclared identifier 'froma'; did you mean 'from'?
froma = v8; 
^~~~~
from
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:898:45: note: 'from' declared here
void  validate_replace_rtx_1( rtx *loc, rtx from, rtx to, rtx object) 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:980:14: error: expected expression
v13 = ( rtx *)&v4->fld[v9]; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/recog.c:990:1: error: use of undeclared identifier 'v34'
v34 = *v13; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_replace_rtx_1/src/obj/recog.o] Error 1
